--- a/unidad-4/proyectoNeron/public/cliented1/index.html
+++ b/unidad-4/proyectoNeron/public/cliented1/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cliented1</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="sketch.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Afrodita — Letra</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="sketch.js"></script>
 </head>
 <body>
-    <p id="title" class="title">Hola Mundo!</p>
+  <div id="overlay">
+    <div id="song-title">Afrodita — Neron Arkano</div>
+    <div id="lyric-controls">
+      <button id="prev-lyric">Anterior</button>
+      <span id="lyric-fragment"></span>
+      <button id="next-lyric">Siguiente</button>
+    </div>
+    <div id="creative-controls">
+      <button id="highlight-lyric">Resaltar verso</button>
+      <label>
+        Color:
+        <input type="color" id="lyric-color" value="#ffd6a0">
+      </label>
+      <label>
+        Eco:
+        <input type="checkbox" id="lyric-eco">
+      </label>
+    </div>
+  </div>
 </body>
 </html>
