--- a/unidad-4/proyectoNeron/public/clientem1/index.html
+++ b/unidad-4/proyectoNeron/public/clientem1/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cliented1</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="sketch.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Afrodita — Música</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="sketch.js"></script>
 </head>
 <body>
-    <p id="title" class="title">Hola Mundo!</p>
+  <div id="overlay">
+    <div id="song-title">Afrodita — Control de Música</div>
+    <div id="music-controls">
+      <button id="play-btn">▶️</button>
+      <button id="pause-btn">⏸️</button>
+      <button id="rewind-btn">⏪</button>
+      <button id="forward-btn">⏩</button>
+    </div>
+    <div id="volume-controls">
+      <label for="volume-slider">Volumen</label>
+      <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1">
+    </div>
+    <div id="fx-controls">
+      <label for="filter-slider">Filtro</label>
+      <input type="range" id="filter-slider" min="0" max="1" step="0.01" value="0">
+      <button id="fx-btn">Efecto</button>
+    </div>
+  </div>
 </body>
 </html>
