--- a/unidad-4/proyectoNeron/public/clientem1/index.html
+++ b/unidad-4/proyectoNeron/public/clientem1/index.html
@@ -2,30 +2,24 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Afrodita — Música</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Afrodita - Control M1</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
   <link rel="stylesheet" href="style.css">
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="sketch.js"></script>
 </head>
 <body>
-  <div id="overlay">
-    <div id="song-title">Afrodita — Control de Música</div>
-    <div id="music-controls">
-      <button id="play-btn">▶️</button>
-      <button id="pause-btn">⏸️</button>
-      <button id="rewind-btn">⏪</button>
-      <button id="forward-btn">⏩</button>
-    </div>
-    <div id="volume-controls">
-      <label for="volume-slider">Volumen</label>
-      <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1">
-    </div>
-    <div id="fx-controls">
-      <label for="filter-slider">Filtro</label>
-      <input type="range" id="filter-slider" min="0" max="1" step="0.01" value="0">
-      <button id="fx-btn">Efecto</button>
-    </div>
+
+  <h1>Control de Parámetros M1</h1>
+
+  <div class="controls">
+    <h2>Control Principal</h2>
+    <input type="range" id="parametroSlider" min="0" max="1" step="0.01" value="0.5">
+    <p>Valor: <span id="parametroValor">0.5</span></p>
   </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  
+  <script src="sketch.js"></script>
 </body>
 </html>
