--- a/unidad-4/proyectoNeron/public/visuales/index.html
+++ b/unidad-4/proyectoNeron/public/visuales/index.html
@@ -2,18 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Afrodita — Visuales</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Afrodita - Visuales</title>
   <link rel="stylesheet" href="style.css">
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-  <script src="sketch.js"></script>
 </head>
 <body>
-  <div id="hud">
-    <div id="estado"></div>
-    <div id="progreso-cancion"></div>
-  </div>
-  <audio id="audio-afrodita" src="afrodita.mp3"></audio>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  
+  <script src="sketch.js"></script>
 </body>
 </html>
