--- a/unidad-4/proyectoNeron/public/clientem2/index.html
+++ b/unidad-4/proyectoNeron/public/clientem2/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Afrodita - Control M2</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Afrodita - Control M2</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js"></script>
+  </head>
 <body>
 
   <h1>Control de Parámetros M2</h1>
 
-  <div class="controls">
-    <h2>Control Secundario</h2>
-    <input type="range" id="parametroSliderM2" min="0" max="1" step="0.01" value="0.5">
-    <p>Valor: <span id="parametroValorM2">0.5</span></p>
+  <div id="control-fase-1" class="controls">
+    <h2>Fase 1: Invocación</h2>
+    <input type="range" id="parametroSlider1" min="0" max="1" step="0.01" value="0.5">
+    <p>Tamaño: <span id="parametroValor1">0.5</span></p>
+    <button id="formaBtn">Cambiar Forma</button>
+  </div>
+
+  <div id="control-fase-2" class="controls hidden">
+    <h2>Fase 2: Oleada</h2>
+    <input type="range" id="parametroSlider2" min="0" max="1" step="0.01" value="0.5">
+    <p>Amplitud de Onda: <span id="parametroValor2">0.5</span></p>
+    <button id="estroboscopicoBtn">Modo Estroboscópico</button>
+  </div>
+
+  <div id="control-fase-3" class="controls hidden">
+    <h2>Fase 3: Rendición</h2>
+    <input type="range" id="parametroSlider3" min="0" max="1" step="0.01" value="0.5">
+    <p>Cantidad de Partículas: <span id="parametroValor3">0.5</span></p>
+    <button id="agruparBtn">Agrupar Partículas</button>
+  </div>
+
+  <div id="estado-info">
+    <p>Fase actual: <span id="estado-display">Fase 1</span></p>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  
   <script src="sketch.js"></script>
 </body>
 </html>
